# vb

./: .env.example  .gitignore
backend/: alembic.ini  pyproject.toml
backend/app/: config.py  deps.py  main.py
backend/app/api/: export.py  pipeline.py  projects.py  review.py  segments.py  speakers.py  ws.py
backend/app/models/: __init__.py  pipeline_run.py  project.py  segment.py  speaker.py  stage_result.py
backend/app/pipeline/: __init__.py  align.py  base.py  diarize.py  dub.py  export.py  ingest.py  mix.py  separate.py  transcribe.py
backend/app/schemas/: pipeline.py  project.py  segment.py  speaker.py
backend/app/services/: pipeline_service.py  project_service.py  storage.py
backend/app/worker/: runner.py  tasks.py
backend/tests/: conftest.py
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/projects/[id]/: page.tsx
frontend/src/app/projects/[id]/export/: page.tsx
frontend/src/app/projects/[id]/review/: page.tsx
frontend/src/app/projects/new/: page.tsx
frontend/src/components/pipeline/: PipelineStatus.tsx  StageCard.tsx
frontend/src/components/review/: MixControls.tsx  SpeakerPanel.tsx  Timeline.tsx  TranscriptEditor.tsx  VideoPlayer.tsx
frontend/src/components/upload/: UploadForm.tsx
frontend/src/hooks/: usePipelineStatus.ts  useProject.ts  useSegments.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/store/: review-store.ts
